SSC-1841 fix button position on mobile

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-find-your-cruise.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-find-your-cruise.less
@@ -707,6 +707,7 @@
                         @media screen and (max-width: @screen-sm) {
                             display: block;
                             float: left;
+                            position: static;
                         }
                     }
 
